library/pod-security-policy/capabilities/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sPSPCapabilities
metadata:
  name: psp-capabilities
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    addCapabilities:
    # - "*" # * may be used to allow all capabilities
    - SYS_TIME
    dropCapabilities:
    # - "all" # * may be used to drop all capabilities
    - SYS_ADMIN
